# diffuse-pilot

./: .env.example  .gitignore  LICENSE  MANUAL.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 009bc3591fc6_initial_migration_with_all_7_entities.py  22b435d1c0a2_remove_queued_tasks_table_migrating_to_.py  2d174a0a2a7a_add_web_research_flag_to_generation_.py  92746fe8181c_add_new_settings_fields.py  afa3fefb6ffa_add_web_research_cache_table.py
docs/: IMPLEMENTATION_SUMMARY.md  architecture-diagram.png.afdesign  remove-contributors.md  sd-webui-stub.md  settings-usage.md  web-research.md
docs/stablediffusion-openapi-spec/: openapi.json
specs/001-image-gen-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-image-gen-agent/checklists/: requirements.md
specs/001-image-gen-agent/contracts/: api-contract.json
src/: __init__.py  bot.py  main.py  sd_webui_stub.py
src/api/: __init__.py  health.py  sd_options.py  settings.py
src/config/: logging.py  settings.py
src/database/: __init__.py  connection.py
src/models/: generation.py  lora.py  settings.py  web_research.py
src/services/: discord_bot.py  error_handler.py  gemini_client.py  ollama_client.py  prompt_agent.py  queue_manager.py  sd_client.py  settings_service.py  web_research.py  xai_client.py
tests/: conftest.py
tests/integration/: test_sd_options_api.py  test_settings_api.py
tests/unit/: test_discord_parameter_display.py  test_error_handler.py  test_gemini_client.py  test_models.py  test_new_settings_fields.py  test_prompt_agent.py  test_prompt_agent_defaults.py  test_sd_webui_stub.py  test_settings_service.py  test_web_research.py  test_xai_client.py
